Fix CI bugs, Fix layout bug

--- a/_sass/r3kapig.scss
+++ b/_sass/r3kapig.scss
@@ -6,6 +6,10 @@
    text-align: center;
 }
 
+.right {
+   text-align: right;
+}
+
 .site {
    list-style-type: none;
    padding: 0px 0px 0 35px;
